-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 18
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8280334 | 19 | Martin Doerr | P3 | Resolved | Fixed | b07 |
| JDK-8280667 | 18.0.1 | Martin Doerr | P3 | Resolved | Fixed | b04 |
| JDK-8280959 | 17.0.3 | Martin Doerr | P3 | Resolved | Fixed | b01 |
| JDK-8281582 | 11.0.15 | Martin Doerr | P3 | Resolved | Fixed | b02 |
The following tests have failed on some machines:
jdk/jfr/api/consumer/TestRecordedFullStackTrace.java
jdk/jfr/event/profiling/TestFullStackTrace.java
In addition, "assert(pc != __null) failed: precondition: must have PC" has occurred on PPC64 because the null check is not done before the frame constructor.
- backported by
-
JDK-8280334 [PPC64, s390] frame size checks are not yet correct
-
- Resolved
-
-
JDK-8280667 [PPC64, s390] frame size checks are not yet correct
-
- Resolved
-
-
JDK-8280959 [PPC64, s390] frame size checks are not yet correct
-
- Resolved
-
-
JDK-8281582 [PPC64, s390] frame size checks are not yet correct
-
- Resolved
-
- relates to
-
JDK-8281061 [s390] JFR runs into assertions while validating interpreter frames
-
- Resolved
-
-
JDK-8279924 [PPC64, s390] implement frame::is_interpreted_frame_valid checks
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/668c2003
-
Commit
openjdk/jdk17u-dev/ac8a550f
-
Commit
openjdk/jdk18/f37bfead
-
Review
openjdk/jdk11u-dev/797
-
Review
openjdk/jdk17u-dev/123
-
Review
openjdk/jdk18/107