8280155: [PPC64, s390] frame size checks are not yet correct

Backport-of: f37bfeadcf036a75defc64ad7f4a9f5596cd7407