src/hotspot/cpu/s390/frame_s390.cpp
@@ -306,7 +306,8 @@ bool frame::is_interpreted_frame_valid(JavaThread* thread) const {
   if (sp() == 0 || (intptr_t(sp()) & (wordSize-1)) != 0) {
     return false;
   }
-  if (fp() - (z_abi_16_size + z_ijava_state_size) < sp()) {
+  int min_frame_slots = (z_abi_16_size + z_ijava_state_size) / sizeof(intptr_t);
+  if (fp() - min_frame_slots < sp()) {
     return false;
   }
   // These are hacks to keep us out of trouble.
